no PT - this fixes the positioning of the little upsidedown triangle next to More, esp. in Chrome.  Without enough space between the href tag and the <div><ul>, the triangle would be clipped in Chrome if we try to push it farther to the right.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1550,8 +1550,9 @@ ul#toplevelmenu li {
 		
 ul#toplevelmenu li.more a {
 	background-image:url(../../img/more-arrow.gif);
-	background-position:right center;
-	background-repeat:no-repeat;
+/*	background-position:right top; */
+   background-position: 100% 0%;
+	background-repeat:no-repeat ;
 	padding-right:13px;
 }
 		
